--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard-enrolled-students.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard-enrolled-students.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" spacing="15" xmlns="http://javafx.com/javafx/23.0.1"
+<VBox alignment="TOP_CENTER" spacing="15" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1"
     xmlns:fx="http://javafx.com/fxml/1"
     fx:controller="com.example.minimoodle.teacherfunctionalities.EnrolledStudentsPageController">
     <padding>
@@ -26,27 +26,11 @@
     <!-- Enrolled Student Table -->
     <TableView fx:id="studentTable" style="-fx-background-color: #f4f4f9;">
         <columns>
-            <TableColumn fx:id="idColumn" prefWidth="120" text="Student ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="200" text="Name" />
+            <TableColumn fx:id="nameColumn" prefWidth="350" text="Student Name" />
+            <TableColumn fx:id="emailColumn" prefWidth="350" text="Student Email" />
         </columns>
         <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
         </columnResizePolicy>
     </TableView>
-
-    <!-- Student Details Section -->
-    <VBox spacing="10"
-        style="-fx-background-color: #ffffff; -fx-padding: 15; -fx-border-radius: 5; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 8, 0, 0, 5);">
-        <Label fx:id="studentNameLabel" style="-fx-font-size: 16px; -fx-font-weight: bold;"
-            text="Name: " />
-        <Label fx:id="studentEmailLabel" style="-fx-font-size: 16px;" text="Email: " />
-        <VBox alignment="CENTER">
-            <children>
-
-                <Button fx:id="teacherBlockButton" onAction="#handleTeacherBlockStudent"
-                    style="-fx-background-color: #f44336; -fx-text-fill: white; -fx-font-size: 14px;"
-                    text="Block Student" />
-            </children>
-        </VBox>
-    </VBox>
 </VBox>
