--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-grading-page.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-grading-page.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.teacherfunctionalities.TeacherGradingPageController">
+<VBox alignment="TOP_CENTER" spacing="10" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.teacherfunctionalities.TeacherGradingPageController">
     <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
@@ -19,10 +19,9 @@
       </font></Label>
     <TableView fx:id="studentTable">
         <columns>
-            <TableColumn fx:id="idColumn" prefWidth="104.79998338222504" text="Student ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="209.60005950927734" text="Name" />
-            <TableColumn fx:id="gradeColumn" prefWidth="98.39996337890625" text="Grade" />
-            <TableColumn fx:id="actionColumn" prefWidth="139.2000732421875" text="Action" />
+            <TableColumn fx:id="nameColumn" prefWidth="250" text="Student Name" />
+            <TableColumn fx:id="gradeColumn" prefWidth="150" text="Grade" />
+            <TableColumn fx:id="actionColumn" prefWidth="200" text="Action" />
         </columns>
       <columnResizePolicy>
          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
