--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard-view-courses.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/student-dashboard-view-courses.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.studentfunctionalities.StudentViewCourses">
+<VBox alignment="TOP_CENTER" spacing="10" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.studentfunctionalities.StudentViewCourses">
     <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
