--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard-enrolled-students.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/teacher-dashboard-enrolled-students.fxml
@@ -5,32 +5,66 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" spacing="15" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1"
-    xmlns:fx="http://javafx.com/fxml/1"
-    fx:controller="com.example.minimoodle.teacherfunctionalities.EnrolledStudentsPageController">
-    <padding>
-        <Insets bottom="20" left="20" right="20" top="20" />
-    </padding>
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #F3F4F6;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.teacherfunctionalities.EnrolledStudentsPageController">
+   <children>
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <!-- Top Ribbon -->
+            <AnchorPane prefHeight="80.0" style="-fx-background-color: #0B3E6B;">
+               <children>
+                  <!-- Mini Moodle Label on the left -->
+                  <Label fx:id="miniMoodleLabel" layoutX="31.0" layoutY="21.0" styleClass="top-ribbon" stylesheets="@styles.css" text="Mini Moodle" AnchorPane.leftAnchor="31.0" AnchorPane.topAnchor="21.0">
+                     <font>
+                        <Font name="System Bold" size="32.0" />
+                     </font>
+                  </Label>
+                  
+                  <!-- Teacher name and back button on the right -->
+                  <HBox alignment="CENTER_RIGHT" layoutX="478.0" layoutY="17.0" spacing="15.0" AnchorPane.rightAnchor="14.8" AnchorPane.topAnchor="17.0">
+                     <children>
+                        <Label fx:id="teacherNameRibbonLabel" alignment="TOP_RIGHT" prefHeight="15.0" prefWidth="204.0" styleClass="teacher-text-label" stylesheets="@styles.css" text="Teacher Name" textAlignment="RIGHT">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="goBackButton" onAction="#handleGoBack" styleClass="dashboard-button" stylesheets="@styles.css" text="Back">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
 
-    <!-- Go Back Button -->
-    <Button fx:id="goBackButton" onAction="#handleGoBack"
-        style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;"
-        text="Back" />
+            <!-- Main Content Area -->
+            <VBox alignment="TOP_CENTER" spacing="30.0" style="-fx-background-color: white; -fx-padding: 40;" VBox.vgrow="ALWAYS">
+               <children>
+                  <!-- Title Label -->
+                  <Label style="-fx-text-fill: #1e3a8a; -fx-font-weight: bold;" styleClass="action-label" stylesheets="@styles.css" text="Currently Enrolled Students" textAlignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                  </Label>
 
-    <!-- Title Label -->
-    <Label style="-fx-font-size: 20; -fx-font-weight: bold; -fx-text-fill: #333;"
-        text="Currently Enrolled Students" />
-
-    <!-- Enrolled Student Table -->
-    <TableView fx:id="studentTable" style="-fx-background-color: #f4f4f9;">
-        <columns>
-            <TableColumn fx:id="nameColumn" prefWidth="350" text="Student Name" />
-            <TableColumn fx:id="emailColumn" prefWidth="350" text="Student Email" />
-        </columns>
-        <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-        </columnResizePolicy>
-    </TableView>
-</VBox>
+                  <!-- Enrolled Student Table -->
+                  <TableView fx:id="studentTable" style="-fx-background-color: #f4f4f9;" VBox.vgrow="ALWAYS">
+                      <columns>
+                          <TableColumn fx:id="nameColumn" prefWidth="350" text="Student Name" />
+                          <TableColumn fx:id="emailColumn" prefWidth="350" text="Student Email" />
+                      </columns>
+                      <columnResizePolicy>
+                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                      </columnResizePolicy>
+                  </TableView>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+   </children>
+</AnchorPane>
