--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-dashboard-student-management.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-dashboard-student-management.fxml
@@ -5,22 +5,75 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="800.0" spacing="20" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.adminfunctionalities.AdminViewStudents">
-    <padding>
-        <Insets bottom="20" left="20" right="20" top="20" />
-    </padding>
-    <Button fx:id="adminDashboardGoBackButton" onAction="#onGoBackClicked" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;" text="Back" />
-    <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-text-fill: #333;" text="Student Info" />
-    <TableView fx:id="adminDashboardStudentsTableView" prefHeight="250" prefWidth="550" style="-fx-background-color: #f4f4f9;">
-        <columns>
-            <TableColumn fx:id="adminDashboardStudentNameColumn" prefWidth="250" text="Name" />
-            <TableColumn fx:id="adminDashboardStudentEmailColumn" prefWidth="250" text="Email" />
-        </columns>
-        <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-        </columnResizePolicy>
-    </TableView>
-    <Button fx:id="adminDashboardViewStudentsButton" disable="true" onAction="#onViewDetailsClicked" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;" text="View Details" />
-</VBox>
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #F3F4F6;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minimoodle.adminfunctionalities.AdminViewStudents">
+   <children>
+      <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <!-- Top Ribbon -->
+            <AnchorPane prefHeight="80.0" style="-fx-background-color: #0B3E6B;">
+               <children>
+                  <!-- Mini Moodle Label on the left -->
+                  <Label fx:id="miniMoodleLabel" layoutX="31.0" layoutY="21.0" styleClass="top-ribbon" stylesheets="@styles.css" text="Mini Moodle" AnchorPane.leftAnchor="31.0" AnchorPane.topAnchor="21.0">
+                     <font>
+                        <Font name="System Bold" size="32.0" />
+                     </font>
+                  </Label>
+                  
+                  <!-- Admin name and back button on the right -->
+                  <HBox alignment="CENTER_RIGHT" layoutX="478.0" layoutY="17.0" spacing="15.0" AnchorPane.rightAnchor="14.8" AnchorPane.topAnchor="17.0">
+                     <children>
+                        <Label fx:id="adminNameRibbonLabel" alignment="TOP_RIGHT" prefHeight="15.0" prefWidth="204.0" styleClass="teacher-text-label" stylesheets="@styles.css" text="Admin" textAlignment="RIGHT">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="adminDashboardGoBackButton" onAction="#onGoBackClicked" styleClass="dashboard-button" stylesheets="@styles.css" text="Back">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+
+            <!-- Main Content Area -->
+            <VBox alignment="TOP_CENTER" spacing="30.0" style="-fx-background-color: white; -fx-padding: 40;" VBox.vgrow="ALWAYS">
+               <children>
+                  <!-- Title Label -->
+                  <Label style="-fx-text-fill: #1e3a8a; -fx-font-weight: bold;" styleClass="action-label" stylesheets="@styles.css" text="Student Management" textAlignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="22.0" />
+                     </font>
+                  </Label>
+
+                  <!-- Student Management Table -->
+                  <TableView fx:id="adminDashboardStudentsTableView" style="-fx-background-color: #f4f4f9;" VBox.vgrow="ALWAYS">
+                      <columns>
+                          <TableColumn fx:id="adminDashboardStudentNameColumn" prefWidth="250" text="Name" />
+                          <TableColumn fx:id="adminDashboardStudentEmailColumn" prefWidth="250" text="Email" />
+                      </columns>
+                      <columnResizePolicy>
+                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                      </columnResizePolicy>
+                  </TableView>
+
+                  <!-- Action Button -->
+                  <HBox alignment="CENTER" spacing="30.0">
+                      <Button fx:id="adminDashboardViewStudentsButton" disable="true" onAction="#onViewDetailsClicked" prefWidth="200.0" styleClass="dashboard-button" stylesheets="@styles.css" text="View Details">
+                         <font>
+                            <Font name="System Bold" size="14.0" />
+                         </font>
+                      </Button>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+   </children>
+</AnchorPane>
