--- a/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-dashboard.fxml
+++ b/Mini-Moodle/src/main/resources/com/example/minimoodle/admin-dashboard.fxml
@@ -45,7 +45,7 @@
                   <VBox alignment="TOP_CENTER" prefHeight="520.0" prefWidth="340.0" spacing="20.0" style="-fx-background-color: linear-gradient(to bottom,  #0B3E6B, #2585DB); -fx-padding: 30;">
                      <children>
                         <!-- Welcome Label -->
-                        <Label fx:id="adminDashboardLabel" prefHeight="40.0" prefWidth="280.0" style="-fx-text-fill: white; -fx-font-weight: bold;" styleClass="welcome-label" stylesheets="@styles.css" text="Welcome, Admin" textAlignment="CENTER" wrapText="true">
+                        <Label fx:id="adminDashboardLabel" alignment="TOP_LEFT" prefWidth="255.0" style="-fx-text-fill: white; -fx-font-weight: bold;" styleClass="welcome-label" stylesheets="@styles.css" text="Welcome, Admin" wrapText="true">
                            <font>
                               <Font name="System Bold" size="28.0" />
                            </font>
